                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 23-01-2006 fixed: checks for skin labels aliases were reaching compiler limits (too much else if's)
 - 23-01-2006 fixed: <animation> tags in references.xml weren't being used.
 - 23-01-2006 fixed: updating menu overlays on dvdstills took 40 seconds, now instant again
 - 23-01-2006 added: cpu usage to codecinfo overlay
 - 23-01-2006 added: Karaoke to left and right rather than just center, thanks to erpi99.
 - 22-01-2006 added: Ability to set default settings for all movies from the video OSD.
 - 22-01-2006 changed: Removed some unused/rarely used settings.
 - 21-01-2006 added: xored trainer engine! thanks to team xored and to britneyspair for skinwork!
 - 21-01-2006 fixed/changed: tuned the subtitle caching a bit. should avoid most issues with rarred subs.
 - 21-01-2006 added: adplug codec to paplayer. add .adplug to the end of the filename of the file you want to play.
 - 21-01-2006 fixed: toggling subtitle with remote didn't affect setting in video osd.
 - 21-01-2006 fixed: unnecessary reloading of the same picture if the slide show consisted of only one picture and next/previous picture was requested.
 - 21-01-2006 added: new builtin command, xbmc.extract(rar/zip file). IMPORTANT: requires absolute paths. thanks to darkdonno459.
 - 21-01-2006 updated: Swedish language file (Thnx to blittan)
 - 21-01-2006 updated: Norwegian language file (Thnx to vnm)
 - 21-01-2006 updated: German language file (Thnx to sCAPe)
 - 21-01-2006 updated: Chinese (Simple) language file (Thnx to walter)
 - 21-01-2006 fixed: My Video 'Query Info For All Files'